add example for array in query
